--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         let count = 0;
         let timerId = null;
 
-        console.debug("[DEBUG] initialize :", numRows, numCols, cloudTotalCount, cloudSize, cloudTotalCount2);
+        console.debug("[DEBUG] initialize :", numRows, numCols, cloudSize);
         initialize();
 
         function initialize(){
