fix : e 매개변수 제거

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         if(cloudEl){
                             const row = parseInt(cloudEl.dataset.row);
                             const col = parseInt(cloudEl.dataset.col);
-                            dragMove(e,row, col);
+                            dragMove(row, col);
                         }
                     }
                 );
