--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
             padding: 8px 16px;
         }
 
+        #instruction {
+            padding: var(--padding);
+        }
         #instructionBtn {
             border: none;
             border-radius: 3px;
